--- a/TaskManager/tasks/templates/tasks/task.html
+++ b/TaskManager/tasks/templates/tasks/task.html
@@ -38,6 +38,7 @@
             <div class="task-meta">
                 <p>Срок сдачи: {{ task.deadline_date }}</p>
                 <p>Приоритет: {{ task.get_priority_display }}</p>
+                <p>Проект: {{ task.project }}</p>
             </div>
 
         </div>
