--- a/TaskManager/templates/navbar.html
+++ b/TaskManager/templates/navbar.html
@@ -9,7 +9,7 @@
                 alt="Logo"
             />
         </a>
-        <a href="{% url 'app_user:register' %}">
+        <a href="{% url 'app_projects:main' %}">
             <span>Task Manager</span>
         </a>
     </div>
