--- a/TaskManager/projects/templates/projects/main.html
+++ b/TaskManager/projects/templates/projects/main.html
@@ -4,7 +4,6 @@
 {% block content %}
     <section class="features-section">
         <div class="features-text">
-            {# TODO: Убрать лишние закрывающие br #}
             <h2>Организовывайте свои задачи <br> и проекты с <strong>Task Manager</strong></h2>
             <ul class="features-list">
                 <li>Управление задачами</li>
@@ -19,7 +18,7 @@
 
             <div class="features-buttons">
                 <a href="{% url 'app_tasks:task_create' %}" class="btn-primary">Создать задачу</a>
-                <button class="btn-primary">Создать проект</button>
+                <a href="{% url 'app_projects:create_project' %}" class="btn-primary">Создать проект</a>
             </div>
         </div>
     </section>
