--- a/TaskManager/projects/templates/projects/project.html
+++ b/TaskManager/projects/templates/projects/project.html
@@ -3,4 +3,19 @@
 
 {% block content %}
 	<h1>Страница проекта: "{{ project }}"</h1>
+    <form method="post" action="">
+        {% csrf_token %}
+        {% for field in form %}
+            {{ field.label }}
+            {{ field }}
+        {% endfor %}
+        <button type="submit" class="save-btn">Сохранить</button>
+    </form>
+
+    <form method="POST" action="{% url 'app_projects:project_delete' project.slug %}">
+        {% csrf_token %}
+        <input type="submit" value="Удалить">
+{#        <a class="delete-btn" type="submit">Удалить</a>#}
+    </form>
+
 {% endblock %}
