--- a/TaskManager/projects/templates/projects/project_form.html
+++ b/TaskManager/projects/templates/projects/project_form.html
@@ -3,9 +3,13 @@
 
 {% block content %}
 	<h1>Форма для создания нового проекта</h1>
-    {% for field in form %}
-    	{{ field.label }}
-        {{ field }}
-    {% endfor %}
+    <form method="post" action="">
+        {% csrf_token %}
+        {% for field in form %}
+            {{ field.label }}
+            {{ field }}
+        {% endfor %}
+        <button type="submit" class="save-btn">Сохранить</button>
+    </form>
 
 {% endblock %}
